--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,27 +2,38 @@
 <html>
 <head>
   <title>TttApp</title>
+  <%= stylesheet_link_tag    "reset.css", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <link href='http://fonts.googleapis.com/css?family=Freckle+Face' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "rails.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 
-  
-  <% if @current_user %>
-    <% if @current_user.role == 'admin' %>
-      <%= link_to 'Users', users_path %>
-      <%= link_to 'All TTTs', all_ttts_path %>
-      <%= link_to 'TTTs', ttts_path %>
-    <% end %>
-    <%= link_to 'Logout', logout_path %>
-    <%= link_to 'TTTs', ttts_path %>
-  <% else %> 
-    <%= link_to 'Login', login_path %>
-  <% end %>
 
+
+<nav>
+  <ul>
+    <li><%= link_to 'Home', ttts_path %></li>
+    <% if @current_user %>
+      <% if @current_user.role == 'admin' %>
+        <li><%= link_to 'Users', users_path %></li>
+        <li><%= link_to 'All TTTs', all_ttts_path %></li>
+      <% end %>
+      <li><%= link_to 'TTTs', ttts_path %></li>
+      <li><%= link_to 'Logout', logout_path %></li>
+      <li class="right-nav">You are logged in as <%= @current_user.email %></li>
+    <% else %> 
+      <li><%= link_to 'Login', login_path %></li>
+    <% end %>
+  </ul>
+</nav>
+<div class='container_12'>
 <%= yield %>
+</div>
 
 </body>
 </html>
