--- a/app/views/ttts/_ttt_button.html.erb
+++ b/app/views/ttts/_ttt_button.html.erb
@@ -2,7 +2,8 @@
 <%if @game_states["#{position}".to_sym] == "" %>
 <%= hidden_field_tag :pc_move, "n"  %>
   <%= hidden_field_tag :pos, "#{position}"  %>
-  <%= f.submit "Click me!" %>
+  <button class ='ttt_btn'></button>
+  <!-- <%= f.submit "Click me!", class: "ttt_btn" %> -->
 <% else %>
-  <button><%=@game_states["#{position}".to_sym]%></button>
+  <button class ='ttt_btn'><%=@game_states["#{position}".to_sym]%></button>
 <% end %>
