fixed styling a bit, updated abilities

--- a/app/views/ttts/_list_ttts.html.erb
+++ b/app/views/ttts/_list_ttts.html.erb
@@ -1,6 +1,6 @@
 
 
-  <h3 class='h3'>List of prending games</h3>
+  <h3 class='h3'>List of pending games</h3>
   <% @pending_ttts.each do |ttt| %>
     <% if ttt != [] %>
       <td class='ttt_name'><%= ttt.name %></td>
