--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing users</h1>
-
+<div class='grid_12 show_users'>
 <table>
   <tr>
     <th>Name</th>
@@ -31,6 +31,7 @@
   </tr>
 <% end %>
 </table>
+</div>
 
 <br />
 
