--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,12 +26,12 @@ body {
         width: 960px;
         text-align: center;
         margin-top: 100px;
-  border-radius: 10px;
-  opacity:0.85;
-  font-family: 'Helvetica';
-  /*color:white;*/
-  overflow: auto;
-  height:100%;
+        border-radius: 10px;
+        opacity:0.85;
+        font-family: 'Helvetica';
+        /*color:white;*/
+        overflow: auto;
+        height:100%;
 }
 
 /* =Grid >> Global
@@ -303,6 +303,30 @@ hr{
   font-size: 15px;
   margin: 10px;
 }
+
+.field #error_explanation{
+  margin-left: auto;
+    margin-right: auto;
+}
+
+
+.field{
+ margin-left: auto;
+    margin-right: auto;
+}
+
+.grid_12.show_users table{
+  margin: auto;
+}
+
+.grid_12.show_users table th{
+  padding: 10px;
+  font-weight: bold;
+}
+
+
+
+
 
 
 
