--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <% end %>
       <li><%= link_to 'TTTs', ttts_path %></li>
       <li><%= link_to 'Logout', logout_path %></li>
-      <li class="right-nav">You are logged in as <%= @current_user.email %></li>
+      <li class="right-nav">You are logged in as <%= link_to @current_user.username, user_path(@current_user) %></li>
     <% else %> 
       <li><%= link_to 'Login', login_path %></li>
     <% end %>
