--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 
 <nav>
   <ul>
-    <li><%= link_to 'Home', ttts_path %></li>
-    <% if @current_user %>
+    <li><%= link_to 'Home', root_path %></li>
+    <% if @current_user != nil %>
       <% if @current_user.role == 'admin' %>
         <li><%= link_to 'Users', users_path %></li>
         <li><%= link_to 'All TTTs', all_ttts_path %></li>
