--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
+      <div class='errors_sel'
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
       <ul>
@@ -8,6 +9,7 @@
         <li><%= msg %></li>
       <% end %>
       </ul>
+    </div>
     </div>
   <% end %>
 
